# Job_Scheduler_System

./: .gitignore  BENCHMARKS.md  Dockerfile  README.md  Schedule_model.ipynb  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gitignore  pyproject.toml
AI/GA/: train.py
AI/RL/: environment.py  inference.py  model.py  requirements.txt  train.py  visualize.py
AI/data/: 全家12月班表.xlsx  全家1月班表.xlsx
AI/notebooks/: main.ipynb
ai/: Dockerfile  pyproject.toml
ai/data/: clean_data.py  全家12月班表.xlsx
ai/models/: dqn.py  environment.py  ga_optimizer.py  problem.py
ai/notebooks/: Schedule_AI_model.ipynb  Shift_AI_model_0525.ipynb
ai/server/: config.py  main.py  schemas.py
ai/server/routers/: health.py  inference.py
ai/server/services/: ga_service.py  metrics.py  model_registry.py  rl_service.py
ai/src/: main.py
ai/src/agents/: environment.py  registry.py
ai/src/api/: health.py  inference.py
ai/src/core/: config.py
ai/src/domain/: problem.py  schemas.py
ai/src/optimizers/: ga.py
ai/src/services/: ga_inference.py  metrics.py  rl_inference.py
ai/src/training/: ga.py  rl.py  visualize.py
ai/training/ga/: train.py
ai/training/rl/: train.py  visualize.py
alembic/: env.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: database.py  main.py
backend/src/: main.py
client/: .dockerignore  FJUAI113_ShiftPolicyDetail_2025-04-24_134820  FJUAI113_ShiftPolicy_2025-04-24_134812  README.md  client.Dockerfile  client.prod.Dockerfile  index.html  package-lock.json  package.json
client/css/: styles.css
client/js/: apiClient.js  env.sample.js  formatter.js  main.js  schedule.js  test.js
client/public/: index.html
client/src/: App.vue  main.js
database/: FJUAI113_EmployeeUnavailability_2025-03-28_183457  FJUAI113_Employee_2025-03-28_182224  init_database.sql  test_1
database/mssql_data/: mastlog.ldf  msdblog.ldf
docs/: database_design.md
frontend/: Dockerfile  pyproject.toml
frontend/css/: styles.css
frontend/js/: main.js
frontend/src/: main.py
frontend/src/api_client/: __init__.py  client.py
frontend/src/core/: config.py
frontend/src/views/: ai_scheduling.py  employees.py  policies.py  schedules.py
scripts/: fetch_inrc1.py
server/: .dockerignore  README.md  requirements.txt  server.Dockerfile  server.dockerFile
server/app/: settings.py  urls.py
server/apps/: asgi.py  settings.py  urls.py  wsgi.py
server/employee/: model.py  serializer.py  urls.py  views.py
server/policy/: models.py  serializers.py  urls.py  views.py
server/schedule/: algorithms.py  business_logic.py  model.py  models.py  serializer.py  urls.py  view.py
src/ai/: main.py
src/backend/: main.py
src/frontend/: main.py
streamlit/: main.py  requirements.txt  streamlit.Dockerfile
streamlit/pages/: employee.py  policy.py  schedule.py
tests/: conftest.py
(+148 files in other folders)
