[project]
name = "job-scheduler-system"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
]
ai = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.3.0",
    "sb3-contrib>=2.3.0",
    "evotorch>=0.5.1",
    "ortools>=9.10",
    "tensorboard>=2.17.0",
    "sqlalchemy>=2.0.48",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]
frontend = [
    "gradio>=5.0.0",
    "httpx>=0.28.0",
]
benchmarks = [
    "pymoo>=0.6.1",
    "scipy>=1.13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/ai",
    "src/backend",
    "src/frontend",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=ai --cov-report=term-missing --import-mode=importlib"
markers = [
    "slow: longer-running tests (>10s)",
    "benchmark: tests that touch the INRC-I benchmark runner",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
