[project]
name = "job-scheduler-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.3.0",
    "sb3-contrib>=2.3.0",
    "deap>=1.4.1",
    "tensorboard>=2.17.0",
    "sqlalchemy>=2.0.48",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server", "models"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
