[project]
name = "job-scheduler-frontend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/api_client",
    "src/core",
    "src/views",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
